nginx/pod.yml
kind: Pod
apiVersion: v1
metadata:
  name: taint-demo
  namespace: meow
spec:
  containers:
    - name: nginx
      image: nginx:latest
      ports:
        - containerPort: 80
  tolerations:
    - key: "prod"
      operator: "Equal"
      value: "true"
      effect: "NoSchedule"
