nginx/ingress.yml
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: first-ingress
  namespace: meow
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
        - pathType: Prefix
          path: /nginx
          backend:
            service:
              name: nginx-service
              port:
                number: 80
        - pathType: Prefix
          path: /app
          backend:
            service:
              name: flask-app-svc
              port:
                number: 5000
